<?xml version="1.0"?>
<package format="2">
    <name>mg400</name>
    <version>1.0.0</version>
    <description>The cr5robot package</description>

    <maintainer email="zhangran@tdobot.cc">zhangran</maintainer>

    <license>BSD</license>
    <buildtool_depend>catkin</buildtool_depend>

    <export>
        <metapackage/>
    </export>
</package>
